<resources>
    <string name="app_name">FeedReader</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_feeds">Configure feeds</string>
    <string name="menu_item_refresh">reload</string>

    <string name="no_articles_message">There are no articles to display.</string>
    <string name="no_articles_image_desc">No articles to show icon.</string>
    <string name="by">" by "</string>
    <string name="view_full_article">view full article</string>
    <string name="menu_item_share">Share Article</string>
    <string name="message_share_article">Check out this awesome article</string>
    <string name="menu_item_add">Add feed source</string>
    <string name="no_feeds_image_desc">No feeds icon</string>
    <string name="no_feeds_message">There are no feed sources</string>
    <string name="feed_url">URL of the feed</string>
    <string name="feed_name">Name of the feed</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_detail_image_desc">No article selected icon</string>
    <string name="no_detail_message">Select article to view</string>
</resources>
