<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <group
        android:checkableBehavior="single" >

        <item
            android:title="@string/menu_item_settings"
            android:orderInCategory="2"
            android:id="@+id/menu_item_settings"
            android:checkable="false" />

        <item
            android:title="@string/menu_item_feeds"
            android:orderInCategory="1"
            android:id="@+id/menu_item_feeds"
            android:checkable="false" />
    </group>

    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_item_refresh" >
    </item>
</menu>